tried to add a cloud instance for db, on a computer it works, on other one does not, added history for moves, improved ai