@@ -3,7 +3,6 @@ package org.example.miniMax;
 import com.example.models.board.Board;
 import com.example.models.board.Move;
 import com.example.models.pieces.Pieces;
-import jakarta.servlet.ServletOutputStream;
 import org.example.board.PieceService;
 
 import java.util.*;
@@ -34,58 +33,54 @@ public class MiniMax {
         }
         mapOfMoves = new LinkedHashMap<>();
 
-        int alpha = Integer.MIN_VALUE;
-        int beta = Integer.MAX_VALUE;
+        float alpha = Float.MIN_VALUE;
+        float beta = Float.MAX_VALUE;
 
         List<Move> moves = pieceService.getAllPossibleMoves(board, isWhite);
 
-        int bestValue = isWhite ? Integer.MIN_VALUE : Integer.MAX_VALUE;
+        if (moves.size() > 1) {
 
-//        try (ExecutorService executorService = Executors.newFixedThreadPool(numberOfThreads)) {
-        try (ExecutorService executorService = Executors.newVirtualThreadPerTaskExecutor()) {
-            for (var move : moves) {
-                if (move.getStart().getPieces() != null) {
-                    executorService.submit(() -> bestMove(alpha, beta, bestValue, move));
+            try (ExecutorService executorService = Executors.newVirtualThreadPerTaskExecutor()) {
+                for (var move : moves) {
+                   executorService.submit(() -> bestMove(alpha, beta, move));
                 }
             }
-        }
-        List<Map.Entry<Float, Move>> list = new LinkedList<>(mapOfMoves.entrySet());
+            List<Map.Entry<Float, Move>> list = new LinkedList<>(mapOfMoves.entrySet());
 
-        list.sort(Map.Entry.comparingByKey());
+            list.sort(Map.Entry.comparingByKey());
 
-        LinkedHashMap<Float, Move> result = new LinkedHashMap<>();
-        for (var entry : list) {
-            result.put(entry.getKey(), entry.getValue());
-        }
-        result.forEach((s, y) -> System.out.println(s + " " + y));
-        Move m;
-        if (isWhite) {
-            m = result.entrySet().iterator().next().getValue();
-            for (var entry : result.entrySet()) {
-                m = entry.getValue();
+            LinkedHashMap<Float, Move> result = new LinkedHashMap<>();
+            for (var entry : list) {
+                result.put(entry.getKey(), entry.getValue());
             }
-        } else {
-            try {
+
+            Move m;
+            if (isWhite) {
                 m = result.entrySet().iterator().next().getValue();
-            } catch (NoSuchElementException e) {
-                return null;
+                for (var entry : result.entrySet()) {
+                    m = entry.getValue();
+                }
+            } else {
+                try {
+                    m = result.entrySet().iterator().next().getValue();
+                } catch (NoSuchElementException e) {
+                    return null;
+                }
             }
+            return m;
+        } else {
+            return moves.get(0);
         }
-        return m;
     }
 
-    private synchronized void bestMove(int alpha, int beta, float bestValue, Move move) {
-        if (move.getStart().getPieces() != null) {
-            Pieces pieceOnStart = move.getStart().getPieces();
-            Pieces pieceOnEnd = move.getEnd().getPieces();
-            pieceService.makeMove(board, move);
-            float value = miniMax(depth - 1, alpha, beta, !isWhite);
-            pieceService.undoMove(board, move, pieceOnStart, pieceOnEnd);
-            if ((isWhite && value > bestValue) || (!isWhite && value < bestValue)) {
-                bestValue = value;
-                mapOfMoves.put(bestValue, move);
-            }
-        }
+    private synchronized void bestMove(float alpha, float beta, Move move) {
+        Pieces pieceOnStart = move.getStart().getPieces();
+        Pieces pieceOnEnd = move.getEnd().getPieces();
+        pieceService.makeMove(board, move);
+        float value = miniMax(depth - 1, alpha, beta, !isWhite);
+        pieceService.undoMove(board, move, pieceOnStart, pieceOnEnd);
+
+        mapOfMoves.put(value, move);
     }
 
     private synchronized float miniMax(int depth, float alpha, float beta, boolean isWhite) {
@@ -101,29 +96,35 @@ public class MiniMax {
             float maxEval = Float.MIN_VALUE;
 
             for (var move : moves) {
+
                 Pieces pieceOnStart = move.getStart().getPieces();
                 Pieces pieceOnEnd = move.getEnd().getPieces();
+
                 pieceService.makeMove(board, move);
 
-                float eval = miniMax(depth - 1, alpha, beta, false);
+                 float eval = miniMax(depth - 1, alpha, beta, false);
+
 
                 pieceService.undoMove(board, move, pieceOnStart, pieceOnEnd);
 
                 maxEval = Math.max(maxEval, eval);
                 alpha = Math.max(alpha, eval);
 
+
                 if (beta <= alpha) {
                     break;
                 }
-            }
 
+            }
             return maxEval;
         } else {
             float minEval = Float.MAX_VALUE;
 
             for (var move : moves) {
+
                 Pieces pieceOnStart = move.getStart().getPieces();
                 Pieces pieceOnEnd = move.getEnd().getPieces();
+
                 pieceService.makeMove(board, move);
 
                 float eval = miniMax(depth - 1, alpha, beta, true);
@@ -149,19 +150,17 @@ public class MiniMax {
     public synchronized boolean isCheckMateIn1() {
         List<Move> moves = pieceService.getAllPossibleMoves(board, isWhite);
 
-        for (var move1 : moves) {
-            if (move1.getStart().getPieces() != null) {
-                Pieces pieceOnStart = move1.getStart().getPieces();
-                Pieces pieceOnEnd = move1.getEnd().getPieces();
-                pieceService.makeMove(board, move1);
+        for (var move : moves) {
+            Pieces pieceOnStart = move.getStart().getPieces();
+            Pieces pieceOnEnd = move.getEnd().getPieces();
+            pieceService.makeMove(board, move);
 
-                if (isGameOver(board, pieceService, isWhite)) {
-                    pieceService.undoMove(board, move1, pieceOnStart, pieceOnEnd);
-                    return true;
-                }
-
-                pieceService.undoMove(board, move1, pieceOnStart, pieceOnEnd);
+            if (isGameOver(board, pieceService, isWhite)) {
+                pieceService.undoMove(board, move, pieceOnStart, pieceOnEnd);
+                return true;
             }
+
+            pieceService.undoMove(board, move, pieceOnStart, pieceOnEnd);
         }
 
         return false;
